# my-dev-team

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  README.md  mycrew.py  project copy.txt  project.txt  pyproject.toml  pytest.ini  requirements  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
agents/: architect.yml  code-judge.md  code-reviewer.md  developer.yml  developer_1.yml  developer_2.yml  final-qa-engineer.md  judge.yml  manager.yml  pm.yml  product-manager.md  qa-engineer.md  qa.yml  reporter.md  reporter.yml  reviewer.yml  senior-developer.md  system-architect.md  workflow.yml
docs/: cli.md  index.md  installation.md  llm.md  ollama.md
examples/: project.txt
skills/code-judge/: SKILL.md
skills/code-reviewer/: SKILL.md
skills/product-manager/: SKILL.md
skills/qa-engineer/: SKILL.md
skills/reporter/: SKILL.md
skills/senior-developer/: SKILL.md
skills/system-architect/: SKILL.md
src/: agents.py  config.py  mycrew.py  project.py
src/agents/: __init__.py  agents.py  architect.py  base.py  base_agent.py  code_judge.py  code_reviewer.py  config.py  developer.py  judge.py  llm_config.py  manager.py  pm.py  product_manager.py  qa.py  qa_engineer.py  qa_final.py  qafinal.py  reporter.py  reviewer.py  schemas.py  skills.py  system_architect.py
src/crew/: __init__.py  crew.py  extension.py  human.py  manager.py  project.py  saver.py
src/devteam/: __init__.py  app.py  cli.py  descriptors.py  settings.py
src/devteam/agents/: base_agent.py  code_judge.py  code_reviewer.py  developer.py  intermediate_tools.py  product_manager.py  qa_engineer.py  qa_final.py  reporter.py  schemas.py  system_architect.py  tool_agent.py
src/devteam/cli/: __init__.py  crew_builder.py  main.py  request.py  runtime.py
src/devteam/config/: llms.yaml  sandbox.yaml
src/devteam/crew/: __init__.py  agents_factory.py  crew.py  crew_factory.py  event_emitter.py  events.py  execution.py  final_result.py  history.py  project_manager.py  project_state.py
src/devteam/extensions/: __init__.py  base_extension.py  console_logger.py  git_committer.py  hitl_cli.py  hitl_gui.py  streamlit_logger.py  workspace_saver.py
src/devteam/gui/: app.py  execution.py  pages.py  rendering.py  session.py
src/devteam/managers/: __init__.py  (+4 more)
src/extensions/: __init__.py  console_logger.py  hitl_cli.py  rate.py  rate_limiter.py  saver.py  workspace_saver.py
src/human/: mailpit.py
src/mail/: mailpit.py
src/managers/: __init__.py  abmanager.py  base.py  base_manager.py  execution_manager.py  integration_manager.py  planning_manager.py  project_manager.py  simplified.py  standard.py
src/my_dev_team/: __init__.py  cli.py
src/project/: __init__.py  project.py  schema.py
src/state/: __init__.py  execution.py  integration.py  planning.py  project.py
src/utils/: __init__.py  mailpit.py  rate_limiter.py  sanitizer.py  workspace.py
tests/: conftest.py  test_agents.py  test_cli.py  test_communication_log.py  test_extensions.py  test_utils_core.py
(+81 files in other folders)
