[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-dev-team"
version = "0.1.0"
description = "An autonomous, LangGraph-powered AI development agency."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain>=1.2.10",
    "aiosqlite>=0.22.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3"
]

[project.scripts]
devteam = "devteam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"devteam.agents.prompts" = ["*.md"]

[tool.pylint.messages_control]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "unnecessary-pass"
]

[tool.pylint.format]
max-line-length = 160
