[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-dev-team"
version = "0.2.0"
description = "An autonomous, LangGraph-powered AI development agency."
authors = [
    { name="Alexander Bobrovsky", email="bobrovsky@seznam.cz" },
]
license = { text="Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0.9",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain>=1.2.10",
    "litellm>=1.82.1",
    "aiosqlite>=0.22.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3"
]

[project.urls]
"Homepage" = "https://github.com/bobrovsky420/my-dev-team"
"Bug Tracker" = "https://github.com/bobrovsky420/my-dev-team/issues"

[project.scripts]
devteam = "devteam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"devteam.agents.prompts" = ["*.md"]

[tool.pylint.messages_control]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "unnecessary-pass"
]

[tool.pylint.format]
max-line-length = 160
